# FileRenamer

./: CMakeLists.txt  README.md  icon.icns  light.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  splashwidget.cpp  splashwidget.h  style.qss
